<resources>
    <string name="app_name">AdvocatesAndNotariesRF</string>
    <string name="action_settings">Settings</string>
    <string name="version">0.652.3.14B</string>
    <string name="main_1">Задать вопрос</string>
    <string name="main_2">Топ вопросов</string>
    <string name="main_3">Адвокаты</string>
    <string name="main_4">Нотариусы</string>
    <string name="main_pod1">СИСТЕМА ПРАВОВОЙ ПОМОЩИ МПРО ФСАР РФ</string>
    <string name="main_pod2">При поддержке ММКА</string>
    <string name="project_ago">назад</string>
    <string name="project_close_dialog">закрыть</string>
    <string name="kol_mess">kol_mess</string>
    <string name="kol_mess_date">kol_mess_date</string>
    <string name="title_activity_sidebar">Sidebar</string>
    <string name="sidebar_1">мой профиль</string>
    <string name="sidebar_2">мои вопросы</string>
    <string name="sidebar_3">мои заказы</string>
    <string name="sidebar_advocates">АДВОКАТЫ</string>
    <string name="sidebar_4">задать вопрос</string>
    <string name="sidebar_5">найти адвоката</string>
    <string name="sidebar_6">адвокаты на карте</string>
    <string name="sidebar_7">онлайн консультация</string>
    <string name="sidebar_8">составить документы</string>
    <string name="sidebar_notaries">НОТАРИУСЫ</string>
    <string name="sidebar_9">список нотариусов</string>
    <string name="sidebar_10">нотариусы на карте</string>
    <string name="sidebar_11">онлайн нотариус</string>
    <string name="sidebar_12">форум</string>
    <string name="sidebar_13">платные услуги</string>
    <string name="sidebar_14">помощь</string>
    <string name="sidebar_15">настройки</string>
    <string name="sidebar_16">о приложении</string>
    <string name="title_activity_log_in">LogIN</string>
    <string name="input">ВХОД</string>
    <string name="log_in_email_phone">Email</string>
    <string name="log_in_password">Пароль</string>
    <string name="log_in_input">ВХОД</string>
    <string name="log_in_forget">Напомнить пароль</string>
    <string name="log_in_reg">Регистрация</string>
    <string name="title_activity_sign_up">SignUP</string>
    <string name="sign_up_reg">Регистрация пользователя</string>
    <string name="sign_up_pole_1">обязательные поля</string>
    <string name="sign_up_p_1">Ник*</string>
    <string name="sign_up_p_2">Телефон*</string>
    <string name="sign_up_p_3">E-mail*</string>
    <string name="sign_up_p_4">Пароль*</string>
    <string name="sign_up_p_5">Повторите пароль*</string>
    <string name="sign_up_pole_2">дополнительная информация </string>
    <string name="sign_up_p_6">Фамилия</string>
    <string name="sign_up_p_7">Имя</string>
    <string name="sign_up_p_8">Отчество</string>
    <string name="sign_up_p_9">регион</string>
    <string name="sign_up_p_10">город</string>
    <string name="sign_up_l_s">лицензионное соглашение</string>
    <string name="sign_up_but_reg">зарегистрироваться</string>
    <string name="sign_error_one">Поле " </string>
    <string name="sign_error_two">не заполнено!" </string>
    <string name="sign_error_phone_one">Номер телефона должен состоять из 10 цифр (9** *** ****)!" </string>
    <string name="sign_error_phone_two">Номер телефона должен начинаться с цифры 9!" </string>
    <string name="sign_error_password_lengh">Пароль долджен состоят минимум из 6 символов!" </string>
    <string name="sign_error_password_no_two">Пароли не совпадают!" </string>
    <string name="title_activity_my_profile">My_profile</string>
    <string name="my_prof_header">мой профиль</string>
    <string name="my_prof_t1">фамилия:</string>
    <string name="my_prof_t2">имя:</string>
    <string name="my_prof_t3">отчество:</string>
    <string name="my_prof_t4">e-mail:</string>
    <string name="my_prof_t5">телефон:</string>
    <string name="my_prof_t6">город:</string>
    <string name="my_prof_t7">выйти из аккаунта</string>
    <string name="title_activity_my_questions">MyQuestions</string>
    <string name="my_quest_header">мои вопросы</string>
    <string name="my_quest_header_list_1">частные</string>
    <string name="my_quest_header_list_2">чат</string>
    <string-array name="my_quest_array_sorting">
        <item>по статусу</item>
        <item>по дате</item>
        <item>по теме</item>
    </string-array>
    <string-array name="ArraySpecialization">
        <item>Арбитраж и защита бизнеса</item>
        <item>Административное и трудовое право</item>
        <item>Гражданское и наследственное право</item>
        <item>Страховые споры и ГИБДД</item>
        <item>Уголовное право</item>
        <item>Обращения в органы власти РФ</item>
        <item>Авторское право</item>
        <item>Жилищное и семейное право</item>
        <item>Исполнительное производство (долги)</item>
        <item>Кадастровые и земельные споры</item>
        <item>Конституционное право</item>
        <item>Медиация</item>
        <item>Медицинское право</item>
        <item>Миграционное право</item>
        <item>Налоговые споры (бухгалтерия)</item>
        <item>Обращения в ЕСПЧ (ООН) </item>
        <item>Права потребителей</item>
        <item>Регистрация фирм</item>
        <item>Сделки и споры с недвижимостью</item>
        <item>Таможенное право</item>
        <item>Не имеет значения</item>
        <item>Затрудняюсь выбрать  </item>
        <item>Затрудняюсь выбрать  </item>
    </string-array>
    <string name="sort_p1">фильтры</string>
    <string name="sort_s1">только избранные</string>
    <string name="sort_s2">по специализации</string>
    <string name="sort_p2">сортировка</string>
    <string name="sort_s3">по удаленности</string>
    <string name="sort_s4">по рейтенгу</string>
    <string-array name="Array_sort_advocates">
        <item>без сортировки</item>
        <item>избранные</item>
        <item>по специализации</item>
        <item>по удаленности</item>
        <item>по рейтингу</item>
    </string-array>
    <string name="title_activity_ask_aquestion">AskAQuestion</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_header">настройки</string>
    <string name="settings_sh">размер шрифта</string>
    <string name="settings_sh_1">маленький</string>
    <string name="settings_sh_2">средний</string>
    <string name="settings_sh_3">большой</string>
    <string name="settings_sh_4">очень большой</string>
    <string name="settings_pu">Push-уведомления</string>
    <string name="settings_pu_1">уведомления при ответе на частный вопрос</string>
    <string name="settings_pu_2">уведомления при ответе на вопрос с форума</string>
    <string name="settings_pu_3">уведомления при подтверждении платежа</string>
    <string name="title_activity_my_orders">My_orders</string>
    <string name="my_orders_header">мои заказы</string>
    <string name="my_orders_hea_1">консультация online</string>
    <string name="my_orders_hea_2">заказ документов</string>
    <string name="my_orders_hea_3">пакеты документов</string>
    <string name="title_activity_advocates_list">Advocates_list</string>
    <string name="title_activity_advocate_profile">Advocate_profile</string>
    <string name="profile_advocate_header">профиль адвоката</string>
    <string name="profile_advocate_p_1">телефон</string>
    <string name="profile_advocate_p_2">e-mail</string>
    <string name="profile_advocate_p_3">количество ответов</string>
    <string name="profile_advocate_p_4">количество благодврностей</string>
    <string name="profile_advocate_p_5">ИНФОРМАЦИЯ</string>
    <string name="profile_advocate_p_6">адрес</string>
    <string name="profile_advocate_p_7">стаж работы</string>
    <string name="profile_advocate_p_8">компания, организация</string>
    <string name="profile_advocate_p_9">сайт</string>
    <string name="profile_advocate_p_10">специализация</string>
    <string name="profile_advocate_p_11">срочный выезд</string>
    <string name="profile_advocate_p_12">членство ФСАР</string>
    <string name="profile_advocate_p_13">график работы</string>
    <string name="profile_advocate_p_14">задать вопрос</string>
    <string name="profile_advocate_p_15">рейтинг</string>
    <string name="my_profile_m15">Судебная территория:</string>
    <string name="my_profile_m16">Рег. номер:</string>
    <string-array name="array_profile_jur">
        <item>Рег. номер   </item>
        <item>Стаж         </item>
        <item>Срочный выезд</item>
        <item>Членство во ФСАР </item>
        <item>Работа в выходные</item>
    </string-array>
    <string name="title_activity_add_question">AddQuestion</string>
    <string name="add_question_header">задать вопрос</string>
    <string name="add_question_no_who_mess_str">нажмите для выбора</string>
    <string name="add_question_forum">форум</string>
    <string-array name="ArrayTipAddQuest">
        <item>Арбитраж и защита бизнеса</item>
        <item>Административное и трудовое право</item>
        <item>Гражданское и наследственное право</item>
        <item>Страховые споры и ГИБДД</item>
        <item>Уголовное право</item>
        <item>Обращения в органы власти РФ</item>
        <item>Авторское право</item>
        <item>Жилищное и семейное право</item>
        <item>Исполнительное производство (долги)</item>
        <item>Кадастровые и земельные споры</item>
        <item>Конституционное право</item>
        <item>Медиация</item>
        <item>Медицинское право</item>
        <item>Миграционное право</item>
        <item>Налоговые споры (бухгалтерия)</item>
        <item>Обращения в ЕСПЧ (ООН) </item>
        <item>Права потребителей</item>
        <item>Регистрация фирм</item>
        <item>Сделки и споры с недвижимостью</item>
        <item>Таможенное право</item>
        <item>Не имеет значения</item>
        <item>Без темы</item>
        <item>Затрудняюсь выбрать</item>
    </string-array>
    <string name="title_activity_advocates_list_quest">Advocates_list_quest</string>
    <string name="title_activity_consultation_online">consultation_online</string>
    <string name="consultation_online_header">онлайн консультация</string>
    <string name="consultation_online_phone">Получить консультацию специалиста по телефону</string>
    <string name="consultation_online_mess">Написать вопрос нашим специалистам</string>
    <string name="title_activity_forum">Forum</string>
    <string name="forum_header">форум</string>
    <string name="forum_add_quest">задать вопрос</string>
    <string name="title_activity_consult_phone">Consult_phone</string>
    <string name="title_activity_paid_services">Paid_services</string>
    <string name="title_activity_create_document">create_document</string>
    <string name="name_docTip">Специализация адвоката</string>
    <string name="name_docVid">Вид документа</string>
    <string name="name_docForm">Форма заявки</string>
    <string name="name_docAttach">Прикрепить документ</string>
    <string name="name_docAddText">Введите текст </string>
    <string name="tosend">Отправить</string>
    <string name="profile_notary_p_5">предварительная запись</string>
    <string name="profile_notary_p_6">работа в выходные</string>
    <string name="profile_notary_p_7">заказ по E-mail</string>
    <string name="profile_notary_p_8">выезд нотариусов</string>
    <string name="profile_notary_p_9">работа с юр.лицами</string>
    <string name="profile_notary_p_10">заверение сайтов</string>
    <string name="profile_notary_p_11">наследство</string>
    <string name="profile_notary_p_12">фиксация доказательств</string>
    <string name="profile_notary_p_13">запросы и дубликаты</string>
    <string name="profile_notary_p_14">депозиты</string>
</resources>