<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView5"
        android:background="#18355c"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_p1"
                android:gravity="center"
                android:textSize="18dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:background="#0f040404"
                android:textColor="#fec12c" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_5"
                android:id="@+id/filter_not_check_1"
                android:textSize="15dp"
                android:layout_marginLeft="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_6"
                android:id="@+id/filter_not_check_2"
                android:layout_margin="10dp"
                android:textSize="15dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_7"
                android:id="@+id/filter_not_check_3"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_8"
                android:id="@+id/filter_not_check_4"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_9"
                android:id="@+id/filter_not_check_5"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_10"
                android:id="@+id/filter_not_check_6"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_11"
                android:id="@+id/filter_not_check_7"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_12"
                android:id="@+id/filter_not_check_8"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_13"
                android:id="@+id/filter_not_check_9"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notary_p_14"
                android:id="@+id/filter_not_check_10"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#16345b">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/filter_but_not_start_sort"
            android:layout_weight="0.5"
            android:background="@drawable/but_new"
            android:layout_margin="3dp"
            android:text="принять" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="отменить"
            android:id="@+id/filter_but_not_close"
            android:layout_weight="0.5"
            android:background="@drawable/but_new"
            android:layout_margin="3dp" />
    </LinearLayout>
</FrameLayout>