<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/color_menubar_l"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_but_cancel"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="#00ffffff"
                android:onClick="onClick"
                android:text="назад"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#ffffff"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:text="@string/settings_header"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:background="#ffffff" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_marginTop="54dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_gray_fon"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/settings_sh"
                    android:textColor="@color/color_bluedark_for_bar"
                    android:textSize="16dp"
                    android:typeface="monospace" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_1"
                    android:id="@+id/settings_ch_1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="14dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_2"
                    android:id="@+id/settings_ch_2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_3"
                    android:id="@+id/settings_ch_3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="18dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sh_4"
                    android:id="@+id/settings_ch_4"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_gray_fon"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/settings_pu"
                    android:textColor="@color/color_bluedark_for_bar"
                    android:textSize="16dp"
                    android:typeface="monospace" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="уведомления при получении ответа на вопрос"
                    android:id="@+id/settings_p_1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="уведомление о получении на почту документов"
                    android:id="@+id/settings_p_2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="уведомления при получении консультации "
                    android:id="@+id/settings_p_3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>