<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#16345b">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/filter_but_start_sort"
            android:layout_weight="0.5"
            android:background="@drawable/but_new"
            android:layout_margin="3dp"
            android:text="принять" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="отменить"
            android:id="@+id/filter_but_close"
            android:layout_weight="0.5"
            android:background="@drawable/but_new"
            android:layout_margin="3dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView5"
        android:background="#18355c"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_p1"
                android:gravity="center"
                android:textSize="18dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:background="#0f040404"
                android:textColor="#fec12c" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_s1"
                android:id="@+id/filter_check_iz"
                android:layout_margin="10dp"
                android:textSize="15dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sort_s2"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/filter_but_spec"
                    android:background="@drawable/but_new" />
            </FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/but_new"
                android:id="@+id/filter_lila_spec">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_1"
                    android:checked="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_2"
                    android:checked="false"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="5dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_3"
                    android:checked="false"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="5dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_4"
                    android:checked="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_5"
                    android:checked="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_6"
                    android:checked="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_7"
                    android:checked="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/filter_check_spc_8"
                    android:checked="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_p2"
                android:gravity="center"
                android:textSize="18dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="#0f040404"
                android:textColor="#fec12c" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_s3"
                android:id="@+id/filter_check_ud"
                android:layout_margin="10dp"
                android:textSize="15dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_s4"
                android:id="@+id/filter_check_rating"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>